remove aquosa support
Aquosa project is discontinued. Remove support for it.

Signed-off-by: Juri Lelli <juri.lelli@arm.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,4 +6,4 @@ if AMJSON
 rt_app_SOURCES += rt-app_parse_config.h rt-app_parse_config.c
 AM_CPPFLAGS += $(LIBJSON_CFLAGS)
 endif
-rt_app_LDADD = $(QRESLIB) ../libdl/libdl.a $(LIBJSON_LIBS)
+rt_app_LDADD = ../libdl/libdl.a $(LIBJSON_LIBS)
