--- a/README.in
+++ b/README.in
@@ -6,7 +6,7 @@ README for rt-app @VERSION@
 
 rt-app is a test application that starts multiple periodic threads in order to
 simulate a real-time periodic load. It supports SCHED_OTHER, SCHED_FIFO,
-SCHED_RR as well as the AQuoSA framework and SCHED_DEADLINE.
+SCHED_RR and SCHED_DEADLINE.
 
 Code is currently maintained on GitHub:
 
@@ -21,7 +21,6 @@ rt-app runs on GNU/Linux. It needs autoconf, automake, libtool and a recent
 compiler (mainly: gcc) for basic features.
 
 For advanced usage, the following optional libraries are needed:
-- qreslib for AQuoSA support (and, obviously a GENS_SCHED patched kernel)
 - a SCHED_DEADLINE patched kernel to support SCHED_DEADLINE policy.
 - json-c installed for reading config files. In case libjson is not available
   for your target, you can download and compile json-c from
@@ -40,10 +39,6 @@ $ make install
 Last step is optional, rt-app is generated in the src/ directory.
 
 Typical usage:
-$ ./configure --with-aquosa
-	adds support for the AQuoSA framework.
-	qreslib MUST be installed in the system to compile this feature
-
 $ ./configure --with-deadline
 	adds support for SCHED_DEADLINE.
 	There are no compile-time requirements for this feature.
@@ -85,20 +80,15 @@ usage: rt-app [options] -t <period>:<exec>[:cpu affinity[:policy[:deadline[:prio
 -G, --gnuplot	:	generate gnuplot script (needs -l)
 -D, --duration	:	time (in seconds) before stopping threads
 -K, --no-mlock	:	Do not lock pages in memory
--q, --qos	:	create AQuoSA reservation
 -g, --frag	:	fragment for the reservation
 
-POLICY: f=SCHED_FIFO, r=SCHED_RR, o=SCHED_OTHER, q=AQuoSA
+POLICY: f=SCHED_FIFO, r=SCHED_RR, o=SCHED_OTHER
 AFFINITY: comma-separated cpu index (starting from 0) i.e. 0,2,3 for first,
 third and fourth CPU
-
-Note: when using AQuoSA scheduling, priority is used as percent increment for
-budget over exec time
 
 Options:
 
 * --fifo,--rr and --qos sets the default scheduling policy for all threads.
-	--qos is available only when compiled with AQuoSA support enabled.
 
 * --logdir and --baselog control log output (rt-app creates one log for each
 	thread).  If --logdir is not present, rt-app logs everything to stdout.
@@ -113,9 +103,6 @@ Options:
 	duration of execution,  i.e. each thread is started every $spacing ms
 	and the total runtime is $duration.
 
-* --frag (AQuoSA only): fragments the reservation period by $fragmentation, i.e.
-	reservation period is $frag times smaller than thread's period.
-
 * --no-mlock: do not lock threads' memory pages when using realtime scheduling
 	classes
 
@@ -125,11 +112,10 @@ Each thread is specified by
 
 period   : thread period in microseconds
 exec     : thread WCET in microseconds
-policy   : one of f=SCHED_FIFO, r=SCHED_RR, o=SCHED_OTHER, q=AQuoSA (if enabled)
+policy   : one of f=SCHED_FIFO, r=SCHED_RR, o=SCHED_OTHER
 affinity : comma-separated cpu index (starting from 0) i.e. 0,2,3 for first,
 	   third and fourth CPU
-prio     : thread priority in SCHED_FIFO/SCHED_RR/SCHED_OTHER, percentile
-           increment for AQuoSA reservation budget w.r.t. WCET.
+prio     : thread priority in SCHED_FIFO/SCHED_RR/SCHED_OTHER
 deadline : deadline in microseconds (used ONLY for plotting!)
 
 
