configure: check for libjson instead of libjson-c
libjson-dev is common to both Ubuntu and Debian.
Check for libjson-dev package when configuring with json support.

Signed-off-by: Juri Lelli <juri.lelli@arm.com>

--- a/configure.ac
+++ b/configure.ac
@@ -20,7 +20,7 @@ AC_ARG_WITH([json],
 	    ], [], [with_json=no]
 	   )
 AS_IF([test "x$with_json" != "xno"],
-        [PKG_CHECK_MODULES([LIBJSON], [json-c], [AC_DEFINE([JSON], [1], [Define if you have libjson])])
+        [PKG_CHECK_MODULES([LIBJSON], [json], [AC_DEFINE([JSON], [1], [Define if you have libjson])])
      ])
 
 AM_CONDITIONAL([AMJSON], [ test x$with_json != xno])
